# BlackPay

./: .env.example  .gitignore  Dockerfile  Dockerfile.crypto  README.md  docker-compose.yml  manage.py  requirements-dev.txt  requirements.txt
apps/api/: __init__.py  exceptions.py  urls.py  views.py
apps/compliance/: __init__.py  gdpr.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/crypto_bridge/: __init__.py  exceptions.py  hybrid_kem.py  loader.py  pqc.py  symmetric.py  zk.py
apps/ipfs_storage/: __init__.py  ipfs_client.py  urls.py  views.py
apps/payments/: __init__.py  models.py  nowpayments.py  serializers.py  stripe_client.py  tasks.py  transak_client.py  urls.py  views.py  wise_client.py
apps/users/: __init__.py  fido2_auth.py  models.py  pqc_auth.py  serializers.py  urls.py  views.py
apps/wallet/: __init__.py  models.py  serializers.py  urls.py  views.py
apps/zk_layer/: __init__.py  urls.py  views.py  zk_proof.py
blackpay/: celery.py  pqc_config.py  settings.py  urls.py  wsgi.py
crypto_engine/: CMakeLists.txt
crypto_engine/bindings/: blackpay_crypto.cpp
crypto_engine/include/: hybrid_kem.hpp  pqc_engine.hpp  secure_memory.hpp  symmetric.hpp  zk_engine.hpp
crypto_engine/src/: hybrid_kem.cpp  pqc_engine.cpp  secure_memory.cpp  symmetric.cpp  zk_engine.cpp
crypto_engine/tests/: test_hybrid_kem.cpp  test_pqc.cpp  test_symmetric.cpp
